<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:paddingBottom="16dp">

        <!-- Product Image -->
       <ImageView
           android:layout_width="80dp"
           android:layout_height="80dp"
           android:id="@+id/product_img"
           android:src="@drawable/banana"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp">

            <!-- Product name-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="Bananas"
                android:id="@+id/txt_product_name"/>

            <!-- START Product code view group-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-small"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/bar_code"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-small"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="2398465477892"
                    android:id="@+id/txt_product_code"/>
            </LinearLayout>
            <!-- END Product code view group-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- START product price view group-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-small"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:layout_marginRight="5dp"
                            android:text="@string/price"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-small"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:text="$25/kg"
                            android:id="@+id/txt_product_price"/>
                    </LinearLayout>
                    <!-- END Product price view group-->

                    <!-- START Product quantity view group-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:text="6"
                            android:textColor="@color/colorAccent"
                            android:id="@+id/txt_product_quantity"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/in_stock"
                            android:textAllCaps="true"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/colorAccent" />
                    </LinearLayout>
                    <!-- END Product quantity view group-->
                </LinearLayout>

                <!-- SALE button -->
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:id="@+id/btn_decrement_quantity"
                    android:theme="@style/AppTheme.RaisedButtonAccent"
                    android:focusable="false"
                    android:text="@string/sale"/>
            </RelativeLayout>
          
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>